--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors Game</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>Rock Paper Scissors Game</title>
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
@@ -36,5 +37,6 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
